--- a/KillFeed/KillFeed.csproj
+++ b/KillFeed/KillFeed.csproj
@@ -7,7 +7,7 @@
     <ProjectGuid>{E4E48B71-104F-48A5-A212-6BA918966F6F}</ProjectGuid>
     <OutputType>Library</OutputType>
     <RootNamespace>KillFeed</RootNamespace>
-    <AssemblyName>Betatestkillfeed</AssemblyName>
+    <AssemblyName>KillFeed</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
